--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^4.1.3",
     "@astrojs/rss": "^4.0.14",
     "astro": "^5.15.9",
+    "preact": "^10.27.2",
     "sharp": "^0.34.5"
   }
 }
